# irss_seminar_2025

./: README.md  irss_seminar.ipynb  pyproject.toml  style.mplstyle
data/: df_mortality_TOTAL.csv
utils/: data.py  func.py  plotting.py  segmentation.py
