[project]
name = "irss-seminar"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "polars>=1.35.1",
    "scikit-learn>=1.7.2",
    "scipy-stubs==1.16.3.0",
    "statsmodels==0.14.5",
]
